buildscript {
    repositories {
        mavenCentral()
        gradlePluginPortal()
    }
    dependencies {
        if (JavaVersion.current().getMajorVersion().toInteger() in (17..24)) {
            classpath "com.vanniktech:gradle-maven-publish-plugin:$mavenPublishPluginVersion"
        }
    }
}

ext.isPublishingJvm = JavaVersion.current().getMajorVersion().toInteger() in (17..24)

allprojects {
    apply plugin: 'idea'
}

idea {
    project {
        jdkName = JavaVersion.VERSION_17
        languageLevel = JavaVersion.VERSION_17

        vcs = "Git"
    }

    workspace.iws.withXml { provider ->
        def junitDefaults = provider.node.component.find { it.@name == 'RunManager' }.configuration.find {
            it.@type == 'JUnit'
        }
        junitDefaults.option.find { it.@name == 'WORKING_DIRECTORY' }.@value = '$MODULE_DIR$'
    }
}

subprojects {
    apply plugin: 'java-library'
    if (rootProject.ext.isPublishingJvm) {
        apply plugin: 'com.vanniktech.maven.publish'
    }
    group = 'com.github.dreamhead'
    version = '1.6.2-SNAPSHOT'

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    repositories {
        mavenCentral()
    }

    if (rootProject.ext.isPublishingJvm) {
        mavenPublishing {
            publishToMavenCentral()
            signAllPublications()

            pom {
                name = project.name
                description = 'Moco is an easy setup stub framework, mainly focusing on testing and integration.'
                url = 'https://github.com/dreamhead/moco'
                licenses {
                    license {
                        name = 'MIT Licence'
                        url = 'https://raw.githubusercontent.com/dreamhead/moco/master/MIT-LICENSE.txt'
                    }
                }
                developers {
                    developer {
                        id = 'dreamhead'
                        name = 'Zheng Ye'
                        email = 'dreamhead.cn@gmail.com'
                    }
                }
                scm {
                    connection = 'scm:git:https://github.com/dreamhead/moco.git'
                    developerConnection = 'scm:git:https://github.com/dreamhead/moco.git'
                    url = 'https://github.com/dreamhead/moco'
                }
            }
        }
    }

    project.jar {
        manifest {
            attributes 'Package': "com.github.dreamhead",
                    'Implementation-Title': "${project.name}",
                    'Implementation-Version': "${archiveVersion.get()}",
                    'Implementation-Vendor': 'Zheng Ye',
                    'Built-By': 'Zheng Ye',
                    'Built-Date': new Date().getDateTimeString(),
                    'Built-With': "gradle-${project.getGradle().getGradleVersion()}, groovy-${GroovySystem.getVersion()}",
                    'Created-By': 'Java ' + System.getProperty('java.version') + ' (' + System.getProperty('java.vendor') + ')'
        }
    }

    project.dependencies {
        implementation(
                "com.google.guava:guava:$guavaVersion",
                "io.netty:netty-codec-http:$nettyVersion",
                "io.netty:netty-handler:$nettyVersion",
                "tools.jackson.core:jackson-databind:$jacksonVersion",
                "tools.jackson.dataformat:jackson-dataformat-xml:$jacksonVersion",
                "com.jayway.jsonpath:json-path:$jsonpathVersion",
                "org.freemarker:freemarker:$freemarkerVersion",
                "org.slf4j:slf4j-api:$slf4jVersion"
        )

        testImplementation(
                "org.hamcrest:hamcrest-core:$hamcrestVersion",
                "org.hamcrest:hamcrest-library:$hamcrestVersion",
                "org.mockito:mockito-core:$mockitoVersion",
                "org.apache.httpcomponents.client5:httpclient5-fluent:$httpClientVersion",
                "org.skyscreamer:jsonassert:$jsonAssertVersion",
                "jakarta.websocket:jakarta.websocket-api:$websocketVersion"
        )

        testRuntimeOnly(
                "org.glassfish.tyrus.bundles:tyrus-standalone-client:$tyrusClientVersion"
        )
    }

    test {
        addTestListener([
            afterSuite: { suite, result ->
                if (!suite.parent) {
                    println "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
                }
            }
        ] as TestListener)
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs << "-Xlint:unchecked"
        options.compilerArgs << "-Xlint:deprecation"
        options.compilerArgs << "-Xlint:-options"
        options.encoding = 'UTF-8'
    }
}

configure(subprojects.findAll {!it.name.startsWith("moco-junit")}) {
    dependencies {
        testImplementation(
                "org.junit.jupiter:junit-jupiter-api:$junitVersion",
                "org.junit.jupiter:junit-jupiter-engine:$junitVersion",
                "org.junit.jupiter:junit-jupiter-params:$junitVersion"
        )

        testRuntimeOnly(
                "org.junit.platform:junit-platform-launcher:$junitPlatformVersion"
        )
    }

    test {
        useJUnitPlatform()

        // Suppress CDS warning about bootstrap classpath
        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
            jvmArgs('-Xshare:off')
        }
    }
}

wrapper {
    gradleVersion = '9.5.0'
}
